--- a/BallScrewControl.ui
+++ b/BallScrewControl.ui
@@ -1047,38 +1047,6 @@ font: 15pt bold;</string>
       </widget>
       <widget class="QWidget" name="page31">
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="2" column="0">
-         <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,0">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_50">
-            <property name="text">
-             <string>Расчётное положение:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_51">
-            <property name="text">
-             <string>Текущее положение:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="lblPosition_Actual31">
-            <property name="text">
-             <string>---</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLabel" name="lblPosition31">
-            <property name="text">
-             <string>---</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
         <item row="1" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_12">
           <item>
@@ -1095,7 +1063,17 @@ font: 15pt bold;</string>
            </spacer>
           </item>
           <item>
-           <widget class="LED" name="ledSw1_31"/>
+           <widget class="LED" name="ledSw1_31">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="diameter">
+             <number>20</number>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="PushButton" name="btnJog_Minus31">
@@ -1112,7 +1090,17 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item>
-           <widget class="LED" name="ledSw2_31"/>
+           <widget class="LED" name="ledSw2_31">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="diameter">
+             <number>20</number>
+            </property>
+           </widget>
           </item>
           <item>
            <spacer name="horizontalSpacer_2">
@@ -1128,107 +1116,6 @@ font: 15pt bold;</string>
            </spacer>
           </item>
          </layout>
-        </item>
-        <item row="2" column="2" rowspan="2">
-         <layout class="QGridLayout" name="gridLayout_11">
-          <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
-           <widget class="QPushButton" name="btnSave31">
-            <property name="text">
-             <string>Сохранить показание</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_52">
-            <property name="text">
-             <string>Статус привода</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="LED" name="ledStatus31"/>
-          </item>
-         </layout>
-        </item>
-        <item row="3" column="0">
-         <layout class="QGridLayout" name="gridLayout_10">
-          <item row="0" column="1">
-           <widget class="Slider" name="sldVelocity31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="Slider" name="sldAcceleration31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_54">
-            <property name="text">
-             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_53">
-            <property name="text">
-             <string>Скорость, мм/мин</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QLabel" name="label_134">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(114, 159, 207);
-font: 15pt bold;</string>
-          </property>
-          <property name="text">
-           <string>3.1 Измерение хода</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <spacer name="verticalSpacer_8">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
         </item>
         <item row="1" column="2">
          <layout class="QGridLayout" name="gridLayout_40">
@@ -1269,7 +1156,25 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="LED" name="ledOn31"/>
+           <widget class="LED" name="ledOn31">
+            <property name="diameter">
+             <number>20</number>
+            </property>
+            <property name="color">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+            <property name="off_color" stdset="0">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+           </widget>
           </item>
           <item row="1" column="2">
            <spacer name="horizontalSpacer_23">
@@ -1285,6 +1190,139 @@ font: 15pt bold;</string>
            </spacer>
           </item>
          </layout>
+        </item>
+        <item row="3" column="0">
+         <layout class="QGridLayout" name="gridLayout_10">
+          <item row="1" column="1">
+           <widget class="Slider" name="sldAcceleration31">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="Slider" name="sldVelocity31">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_53">
+            <property name="text">
+             <string>Скорость, мм/мин</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_54">
+            <property name="text">
+             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="0" column="0" colspan="3">
+         <widget class="QLabel" name="label_134">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(114, 159, 207);
+font: 15pt bold;</string>
+          </property>
+          <property name="text">
+           <string>3.1 Измерение хода</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,0">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_50">
+            <property name="text">
+             <string>Расчётное положение:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_51">
+            <property name="text">
+             <string>Текущее положение:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLabel" name="lblPosition_Actual31">
+            <property name="text">
+             <string>---</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLabel" name="lblPosition31">
+            <property name="text">
+             <string>---</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="2" rowspan="2">
+         <layout class="QGridLayout" name="gridLayout_11">
+          <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
+           <widget class="QPushButton" name="btnSave31">
+            <property name="text">
+             <string>Сохранить показание</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_52">
+            <property name="text">
+             <string>Статус привода</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="LED" name="ledStatus31"/>
+          </item>
+         </layout>
+        </item>
+        <item row="4" column="0">
+         <spacer name="verticalSpacer_8">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
