--- a/BallScrewControl.ui
+++ b/BallScrewControl.ui
@@ -1530,6 +1530,12 @@ font: 15pt bold;</string>
             </item>
             <item row="0" column="0" colspan="2">
              <widget class="PushButton" name="pushbutton_18">
+              <property name="minimumSize">
+               <size>
+                <width>50</width>
+                <height>50</height>
+               </size>
+              </property>
               <property name="styleSheet">
                <string notr="true">background-color: rgb(138, 226, 52);</string>
               </property>
@@ -1540,6 +1546,12 @@ font: 15pt bold;</string>
             </item>
             <item row="2" column="0" colspan="2">
              <widget class="PushButton" name="pushbutton_19">
+              <property name="minimumSize">
+               <size>
+                <width>50</width>
+                <height>50</height>
+               </size>
+              </property>
               <property name="styleSheet">
                <string notr="true">background-color: rgb(239, 41, 41);</string>
               </property>
@@ -1691,14 +1703,14 @@ font: 15pt bold;</string>
              </widget>
             </item>
             <item row="1" column="2">
-             <widget class="QLabel" name="label_141">
+             <widget class="QLabel" name="lblGeartorque_Error_Value32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="1" column="3">
-             <widget class="QLabel" name="label_142">
+             <widget class="QLabel" name="lblGeartorque_Error_Value_Max32">
               <property name="text">
                <string>---</string>
               </property>
@@ -1712,56 +1724,56 @@ font: 15pt bold;</string>
              </widget>
             </item>
             <item row="2" column="2">
-             <widget class="QLabel" name="label_143">
+             <widget class="QLabel" name="lblBraketorque_Error_Value32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="2" column="3">
-             <widget class="QLabel" name="label_144">
+             <widget class="QLabel" name="lblBraketorque_Error_Value_Max32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="6" column="2">
-             <widget class="QLabel" name="label_145">
+             <widget class="QLabel" name="lblLoad_Error_Value32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="7" column="2">
-             <widget class="QLabel" name="label_146">
+             <widget class="QLabel" name="lblLoad_Temperature32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="6" column="3">
-             <widget class="QLabel" name="label_147">
+             <widget class="QLabel" name="lblLoad_Error_Value_Max32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="7" column="3">
-             <widget class="QLabel" name="label_148">
+             <widget class="QLabel" name="lblLoad_Temperature_Max32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="10" column="3">
-             <widget class="QLabel" name="label_149">
+             <widget class="QLabel" name="lblPos_Temperature_Max32">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
             <item row="10" column="2">
-             <widget class="QLabel" name="label_150">
+             <widget class="QLabel" name="lblPos_Temperature32">
               <property name="text">
                <string>---</string>
               </property>
@@ -1787,10 +1799,26 @@ font: 15pt bold;</string>
            </spacer>
           </item>
           <item>
-           <widget class="LED" name="ledIs_Running_Ccw32"/>
+           <widget class="LED" name="ledIs_Running_Ccw32">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="diameter">
+             <number>50</number>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="PushButton" name="pushbutton_15">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>100</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(138, 226, 52);</string>
             </property>
@@ -1800,14 +1828,20 @@ font: 15pt bold;</string>
             </property>
             <property name="iconSize">
              <size>
-              <width>36</width>
-              <height>36</height>
+              <width>80</width>
+              <height>80</height>
              </size>
             </property>
            </widget>
           </item>
           <item>
            <widget class="PushButton" name="pushbutton_16">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>100</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(239, 41, 41);</string>
             </property>
@@ -1817,14 +1851,20 @@ font: 15pt bold;</string>
             </property>
             <property name="iconSize">
              <size>
-              <width>36</width>
-              <height>36</height>
+              <width>80</width>
+              <height>80</height>
              </size>
             </property>
            </widget>
           </item>
           <item>
            <widget class="PushButton" name="pushbutton_17">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>100</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(138, 226, 52);</string>
             </property>
@@ -1837,14 +1877,24 @@ font: 15pt bold;</string>
             </property>
             <property name="iconSize">
              <size>
-              <width>36</width>
-              <height>36</height>
+              <width>80</width>
+              <height>80</height>
              </size>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="LED" name="ledIs_Running_Cw32"/>
+           <widget class="LED" name="ledIs_Running_Cw32">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="diameter">
+             <number>50</number>
+            </property>
+           </widget>
           </item>
           <item>
            <spacer name="horizontalSpacer_25">
@@ -1929,7 +1979,7 @@ font: 15pt bold;</string>
          </layout>
         </item>
         <item row="9" column="2">
-         <widget class="PlotWidget" name="widget_4" native="true">
+         <widget class="PlotWidget" name="plt32" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -2574,7 +2624,7 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item row="0" column="0" colspan="2">
-           <widget class="PlotWidget" name="widget_3" native="true">
+           <widget class="PlotWidget" name="plt33" native="true">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
               <horstretch>0</horstretch>
