--- a/BallScrewVCP.qrc
+++ b/BallScrewVCP.qrc
@@ -7,5 +7,7 @@
         <file>resources/stop.png</file>
         <file>resources/vertical_line.png</file>
         <file>resources/circle.png</file>
+        <file>resources/caret_left.png</file>
+        <file>resources/caret_right.png</file>
     </qresource>
 </RCC>
